# pygraphviz

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  INSTALL.txt  LICENSE  MANIFEST.in  Makefile  README  README.rst  README.txt  RELEASE.rst  __init__.py  contribute.html  genindex.html  graphviz.i  index.html  install.html  objects.inv  pygraphviz.py  pyproject.toml  pystrings.swg  search.html  searchindex.js  setup.cfg  setup.py  setup_commands.py  setup_egg.py  setup_extra.py  setuptools.py  test_pygraphviz.py  tox.ini  tutorial.html
.circleci/: artifact_path  config.yml
.github/workflows/: cibuildwheel.yml  circleci.yml  conda-macos.yml  conda-ubuntu.yml  conda-windows.yml  conda.yml  coverage.yml  deploy-docs.yml  document.yml  lint.yml  release.yml  run-test-suite-on-windows.yml  test.yml
CMake/: FindGraphviz.cmake  skbuild_utils.cmake
_downloads/1046f06794863c5971e6de6c6cbc7461/: plot_subgraph.ipynb
_downloads/3184e92a37f50733f4d8eda3ab5447d1/: plot_miles.py
_downloads/4e83e39a7d255093d0acd5faad5cd483/: plot_star.ipynb
_downloads/51891f3e62ffa1afbb2166aec79de121/: plot_simple.ipynb
_downloads/8d1b42cb8500b07a1ffe1d61d124333a/: plot_attributes.ipynb
_downloads/91118c7125611ab6ba68163816efff2f/: plot_attributes.py
_downloads/95d36c083063964dcaa01cfdd9cba2a4/: plot_subgraph.py
_downloads/ff67e8e79bb0adcdc076fc61d5a9e5a0/: plot_miles.ipynb
_modules/: index.html
_modules/pygraphviz/: agraph.html
_static/: documentation_options.js  opensearch.xml
auto_examples/: index.html  plot_attributes.html  plot_miles.html  plot_simple.html  plot_star.html  plot_subgraph.html  sg_execution_times.html
doc/: API.txt  Contributing.txt  Credits.txt  Examples.txt  FAQ.txt  License.txt  MailingList.txt  Makefile  News.txt  Readme.txt  Tutorial.txt  attributes.py  draw.py  example.py  gh-pages.py  make_html.py
doc/examples/: attributes.py  django_simple.py  miles.py  simple.py
doc/source/: conf.py  contents.rst  download.rst  examples.rst  index.rst  tutorial.md  tutorial.rst
doc/source/_static/: version_switcher.json
doc/source/_templates/: dev_banner.html  eol_banner.html  layout.html
doc/source/developer/: index.rst  release.rst
doc/source/reference/: agraph.rst  api_notes.rst  credits.rst  faq.rst  history.rst  index.rst  legal.rst  news.rst  related.rst
doc/source/release/: index.rst  old_release_log.rst  release_1.12.rst  release_1.13.rst  release_1.14.rst  release_2.0.1.rst  release_2.0.rst  release_dev.rst
doc/source/templates/: index.html  indexsidebar.html  layout.html
examples/: README.txt  attributes.py  django_simple.py  miles.py  plot_miles.py  plot_simple.py  plot_star.py  plot_subgraph_boundaries.py  simple.py  skip_django_simple.py  skip_utf8_encoding.py  star.py  subgraph.py  utf8_encoding.py
pygraphviz/: CMakeLists.txt  __init__.py  agraph.py  graphviz.i  graphviz.py  graphviz_wrap.c  pygraphviz.py  release.py  scraper.py  testing.py
pygraphviz/tests/: __init__.py  attributes.txt  graph.txt  layout_draw.txt  pygraphviz_test.txt  subgraph.txt  test.py  test_attribute_defaults.py  test_attributes.py  test_clear.py  test_close.py  test_drawing.py  test_edge_attributes.py  test_graph.py  test_html.py  test_layout.py  test_node_attributes.py  test_pygraphviz.py  test_readwrite.py  test_repr_mimebundle.py  test_scraper.py  test_setup.py  test_string.py  test_subgraph.py  test_unicode.py  unicode.txt
reference/: agraph.html  api_notes.html  credits.html  faq.html  history.html  index.html  legal.html  news.html  related.html
requirements/: README.md  build.txt  developer.txt  doc.txt  release.txt  test.txt
test/: pygraphviz_test.txt  test.py
tests/: test_setup.py
